feat(web): add description to file upload button

--- a/web/index.html
+++ b/web/index.html
@@ -17,6 +17,7 @@
             <h2>SPD Input</h2>
             <textarea id="spdInput" placeholder="ここにSPD記法のテキストを入力してください..."></textarea>
             <div class="file-operations">
+                <label for="fileInput">Upload SPD file:</label>
                 <input type="file" id="fileInput" accept=".spd">
                 <button id="downloadButton">Download SPD</button>
             </div>
