--- a/web/index.html
+++ b/web/index.html
@@ -12,6 +12,15 @@
         <p class="reference-link"><a href="commands.html">SPD Commands Reference</a></p>
         <p class="github-link"><a href="https://github.com/steelpipe75/padtools_ts" target="_blank">GitHub Repository</a></p>
     </div>
+    <div class="options-section">
+        <h2>Render Options</h2>
+        <div class="option-group">
+            <label for="fontSizeInput">Font Size:</label>
+            <input type="number" id="fontSizeInput" value="14" min="8" max="72">
+        </div>
+        <button id="applyOptionsButton">Apply Options</button>
+    </div>
+
     <div class="container">
         <div class="input-section">
             <h2>SPD Input</h2>
