feat: Add color options to web UI
Add input fields for base background color, node background color, and text color to the web interface. This allows users to customize the colors of the generated SVG.

--- a/web/index.html
+++ b/web/index.html
@@ -18,6 +18,18 @@
             <label for="fontSizeInput">Font Size:</label>
             <input type="number" id="fontSizeInput" value="14" min="8" max="72">
         </div>
+        <div class="option-group">
+            <label for="baseBackgroundColorInput">Base Background Color:</label>
+            <input type="color" id="baseBackgroundColorInput" value="#ffffff">
+        </div>
+        <div class="option-group">
+            <label for="backgroundColorInput">Node Background Color:</label>
+            <input type="color" id="backgroundColorInput" value="#ffffff">
+        </div>
+        <div class="option-group">
+            <label for="textColorInput">Text Color:</label>
+            <input type="color" id="textColorInput" value="#000000">
+        </div>
         <button id="applyOptionsButton">Apply Options</button>
     </div>
 
