背景透過を選択できるようにする

--- a/web/index.html
+++ b/web/index.html
@@ -21,6 +21,8 @@
         <div class="option-group">
             <label for="baseBackgroundColorInput">Base Background Color:</label>
             <input type="color" id="baseBackgroundColorInput" value="#ffffff">
+            <input type="checkbox" id="transparentBackgroundCheckbox">
+            <label for="transparentBackgroundCheckbox">Transparent</label>
         </div>
         <div class="option-group">
             <label for="backgroundColorInput">Node Background Color:</label>
