feat: Make render options collapsible
Use <details> and <summary> to make the render options section in the web UI collapsible. This improves the layout by hiding less frequently used options.

--- a/web/index.html
+++ b/web/index.html
@@ -12,8 +12,8 @@
         <p class="reference-link"><a href="commands.html">SPD Commands Reference</a></p>
         <p class="github-link"><a href="https://github.com/steelpipe75/padtools_ts" target="_blank">GitHub Repository</a></p>
     </div>
-    <div class="options-section">
-        <h2>Render Options</h2>
+    <details class="options-section" open>
+        <summary><h2>Render Options</h2></summary>
         <div class="option-group">
             <label for="fontSizeInput">Font Size:</label>
             <input type="number" id="fontSizeInput" value="14" min="8" max="72">
@@ -33,7 +33,7 @@
             <input type="color" id="textColorInput" value="#000000">
         </div>
         <button id="applyOptionsButton">Apply Options</button>
-    </div>
+    </details>
 
     <div class="container">
         <div class="input-section">
