feat(web): Make Render Options section collapsed by default
Removed the 'open' attribute from the <details> tag for the 'options-section' in web/index.html,
making the Render Options section collapsed by default on page load.

--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,7 @@
         <p class="reference-link"><a href="commands.html">SPD Commands Reference</a></p>
         <p class="github-link"><a href="https://github.com/steelpipe75/padtools_ts" target="_blank">GitHub Repository</a></p>
     </div>
-    <details class="options-section" open>
+    <details class="options-section">
         <summary><h2>Render Options</h2></summary>
         <div class="option-group">
             <label for="fontSizeInput">Font Size:</label>
