--- a/web/index.html
+++ b/web/index.html
@@ -27,6 +27,8 @@
         <div class="option-group">
             <label for="backgroundColorInput">Node Background Color:</label>
             <input type="color" id="backgroundColorInput" value="#ffffff">
+            <input type="checkbox" id="transparentNodeBackgroundCheckbox">
+            <label for="transparentNodeBackgroundCheckbox">Transparent</label>
         </div>
         <div class="option-group">
             <label for="textColorInput">Text Color:</label>
