feat: Add listRenderType option to web UI and renderer

--- a/web/index.html
+++ b/web/index.html
@@ -34,6 +34,13 @@
             <label for="textColorInput">Text Color:</label>
             <input type="color" id="textColorInput" value="#000000">
         </div>
+        <div class="option-group">
+            <label>List Render Type:</label>
+            <input type="radio" id="listRenderTypeTerminalOffset" name="listRenderType" value="TerminalOffset" checked>
+            <label for="listRenderTypeTerminalOffset">TerminalOffset</label>
+            <input type="radio" id="listRenderTypeOriginal" name="listRenderType" value="Original">
+            <label for="listRenderTypeOriginal">Original</label>
+        </div>
         <button id="applyOptionsButton">Apply Options</button>
     </details>
 
