feat: Organize web/svg directory and update references
- Moved SVG files from web/ to web/svg/.
- Updated web/commands.html to reference SVG files from web/svg/.
- Updated web/convert_spd_to_svg.sh to output SVG files to web/svg/.

--- a/web/commands.html
+++ b/web/commands.html
@@ -18,7 +18,7 @@
             <pre>#コメント
 a = 10
 a を表示</pre>
-            <img src="block.svg" alt="Example diagram for block command">
+            <img src="svg/block.svg" alt="Example diagram for block command">
         </div>
 
         <div class="command-section">
@@ -28,13 +28,13 @@ a を表示</pre>
             <pre>a = 10
 a を表示@標準エラー出力に出力
 a = 0</pre>
-            <img src="newline1.svg" alt="Example diagram for newline command">
+            <img src="svg/newline1.svg" alt="Example diagram for newline command">
             <p>例2:</p>
             <pre>a = 10
 a を表示@
 標準エラー出力に出力
 a = 0</pre>
-            <img src="newline2.svg" alt="Example diagram for newline command">
+            <img src="svg/newline2.svg" alt="Example diagram for newline command">
         </div>
 
         <div class="command-section">
@@ -46,7 +46,7 @@ a = 0</pre>
 		孫ブロック1
 		孫ブロック2
 	子ブロック2</pre>
-            <img src="indentation.svg" alt="Example diagram for indentation command">
+            <img src="svg/indentation.svg" alt="Example diagram for indentation command">
         </div>
 
         <div class="command-section">
@@ -84,7 +84,7 @@ a = 0</pre>
 :dowhile 繰り返し条件（後判定）
 	中身
 :terminal 終了</pre>
-            <img src="commands_diagram.svg" alt="Example diagram for commands">
+            <img src="svg/commands_diagram.svg" alt="Example diagram for commands">
         </div>
     </div>
 </body>
