feat: add render options page
Adds a new page to explain the render options for the SVG output.

- Creates web/render_options.html with descriptions for each render option.
- Creates web/render_options_style.css for the new page.
- Adds a link to the new page in web/index.html.

--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,7 @@
     <h1>SPD(Simple PAD Description) to SVG Converter</h1>
     <div class="link-group">
         <p class="reference-link"><a href="commands.html">SPD Commands Reference</a></p>
+        <p class="reference-link"><a href="render_options.html">Render Options Reference</a></p>
         <p class="github-link"><a href="https://github.com/steelpipe75/padtools_ts" target="_blank">GitHub Repository</a></p>
     </div>
     <details class="options-section">
