feat: add render examples to options page
Add rendering examples for 'List Render Type' option to the render options page.

This helps users visually understand the difference between 'TerminalOffset' and 'Original' rendering types.

--- a/web/render_options.html
+++ b/web/render_options.html
@@ -46,6 +46,17 @@
                 <li><strong>Original:</strong> リスト内の各ノードが、通常のプロセスブロックと同様に描画されます。</li>
             </ul>
             <p>デフォルト値: TerminalOffset</p>
+            <h4>描画例</h4>
+            <div class="image-container">
+                <div>
+                    <p><strong>TerminalOffset</strong></p>
+                    <img src="svg/render_options/commands_diagram_TerminalOffset.svg" alt="TerminalOffset rendering example" class="render-example">
+                </div>
+                <div>
+                    <p><strong>Original</strong></p>
+                    <img src="svg/render_options/commands_diagram_Original.svg" alt="Original rendering example" class="render-example">
+                </div>
+            </div>
         </div>
     </div>
 </body>
