feat: add render examples to options page
Add rendering examples for 'List Render Type' option to the render options page.

This helps users visually understand the difference between 'TerminalOffset' and 'Original' rendering types.

--- a/web/render_options.html
+++ b/web/render_options.html
@@ -42,8 +42,8 @@
             <h3>List Render Type</h3>
             <p>リスト構造（複数のノードが連続するブロック）の描画方法を選択します。</p>
             <ul>
-                <li><strong>TerminalOffset:</strong> リスト内の各ノードが、端子（:terminal）のように少しオフセットされて描画されます。これにより、リストの開始と終了が視覚的に区別しやすくなります。</li>
-                <li><strong>Original:</strong> リスト内の各ノードが、通常のプロセスブロックと同様に描画されます。</li>
+                <li><strong>TerminalOffset:</strong> リスト内の先頭、末尾ある端子ノードが少しオフセットされて描画されます。</li>
+                <li><strong>Original:</strong> リスト内の各ノードが、一直線に描画されます。</li>
             </ul>
             <p>デフォルト値: TerminalOffset</p>
             <h4>描画例</h4>
